@@ -60,6 +60,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #10163: Skip unreadable registry keys during mimetypes
+  initialization.
+
 - Issue #5117: Fixed root directory related issue on posixpath.relpath() and
   ntpath.relpath().
 
